CMake avanzado para construccion de proyecto

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,16 @@
 cmake_minimum_required(VERSION 3.10)
-
 project(InventoryManager)
 
-file(GLOB DATABASE_SOURCE "src/database/*.cpp")
-file(GLOB PRODUCTS_SOURCE "src/product/*.cpp")
-file(GLOB UTILS_SOURCE "src/utils/*.cpp")
-set(SQLITE_SOURCE "src/lib/sqlite/sqlite3.c")
+# It obtains and builds sqlite source files.
+include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/scripts/fetch-sqlite.cmake")
 
-add_library(invemanager SHARED ${DATABASE_SOURCE} ${PRODUCTS_SOURCE} ${UTILS_SOURCE})
-add_library(sqlite SHARED ${SQLITE_SOURCE})
+file(GLOB DATABASE_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/database/*.cpp")
+file(GLOB PRODUCTS_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/product/*.cpp")
+file(GLOB UTILS_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/utils/*.cpp")
+add_executable(main "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp" ${DATABASE_SOURCE} ${PRODUCTS_SOURCE} ${UTILS_SOURCE})
 
-target_include_directories(invemanager PUBLIC src/include)
-target_include_directories(sqlite PUBLIC src/include/sqlite)
+target_include_directories(main PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/include/database")
+target_include_directories(main PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/include/product")
+target_include_directories(main PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/include/utils")
 
-target_link_libraries(invemanager PUBLIC sqlite)
-
-add_executable(main src/main.cpp)
-
-target_link_libraries(main PRIVATE invemanager sqlite)
+target_link_libraries(main PRIVATE sqlite)
