--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
+# Editor
 .vscode
-tests
 
-main
-libinvemanager.so
-libsqlite.so
-
-test.db
-src/lib/sqlite
-
-Makefile
-cmake_install.cmake
-CMakeCache.txt
-build
-CMakeFiles
+# CMake files
+build/*
