--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.22.1)
 project(InventoryManager)
 
 # It obtains and builds sqlite source files.
 include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/scripts/fetch-sqlite.cmake")
+
+# It creates the sqlite database file
+include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/scripts/create-database.cmake")
 
 file(GLOB DATABASE_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/database/*.cpp")
 file(GLOB PRODUCTS_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/product/*.cpp")
@@ -13,4 +16,5 @@ target_include_directories(main PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/include
 target_include_directories(main PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/include/product")
 target_include_directories(main PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/include/utils")
 
+add_dependencies(main create_database_file)
 target_link_libraries(main PRIVATE sqlite)
