Libreria externa cxxopts, construccion del proyecto y pruebas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.22.1)
+cmake_minimum_required(VERSION 3.10)
 project(InventoryManager)
 
 # It obtains and builds sqlite source files.
@@ -6,6 +6,10 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/scripts/fetch-sqlite.cmake")
 
 # It creates the sqlite database file
 include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/scripts/create-database.cmake")
+
+# It obtains cxxopts options parser library source
+include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/scripts/fetch-cxxopts.cmake")
+
 
 file(GLOB DATABASE_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/database/*.cpp")
 file(GLOB PRODUCTS_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/product/*.cpp")
@@ -17,4 +21,5 @@ target_include_directories(main PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/include
 target_include_directories(main PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/include/utils")
 
 add_dependencies(main create_database_file)
+target_link_libraries(main PRIVATE cxxopts)
 target_link_libraries(main PRIVATE sqlite)
