Target de desinstalacion arreglado

--- a/scripts/cmake/uninstall.cmake.in
+++ b/scripts/cmake/uninstall.cmake.in
@@ -1,4 +1,9 @@
-file(READ "@CMAKE_CURRENT_BINARY_DIR@/install_manifest.txt" files_to_remove)
+file(STRINGS "@CMAKE_CURRENT_BINARY_DIR@/install_manifest.txt" files_to_remove)
 foreach(file ${files_to_remove})
   file(REMOVE ${file})
+  if(EXISTS ${file})
+    message(WARNING "Failed to remove ${file}")
+  else()
+    message(STATUS "Removed ${file}")
+  endif()
 endforeach()
