Mejoras en la instalacion / desinstalacion con CMake (archivo de base de datos) ; Correspondiente actualizacion en readme.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,19 @@
 cmake_minimum_required(VERSION 3.10)
 project(InventoryManager)
 
-option(TESTING "Enable testing mode" OFF) # Loads a diferent entry point for the program
-option(DEV "Enable developing mode" OFF)  # Enables some features like an initializing database method
+set(MAINCPP "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp" CACHE STRING "Sets the entry point of the program") # Loads a diferent entry point for the program
+option(DEV_MODE "Enable developing mode" OFF) # Enables some features like an initializing database method
 
-## Compilation CMake variables ##
+# TODO: Crear archivo de base de datos al momento de la instalacion
+# TODO: Mover ~/inventory-manager.db a ~/.local/share/invman o /var/lib/invman
+# TODO: Eliminar archivo de base de datos en la desinstalacion
 
-# Determines the absolute path the begining of the program
-set(EXECUTABLE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp")
-set(TESTING_EXECUTABLE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/tests/main.cpp")
-
-# Determines the absolute path to the sql database initializer code
-set(DATABASE_INIT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/scripts/database/initializer.sql")
+# # Compilation CMake variables ##
 
 # Determines the absolute path to header files to compile the program
 set(HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
-## Installation / Uninstallation CMake variables ##
+# # Installation / Uninstallation CMake variables ##
 
 # Determines the absolute path to CMake installation / uninstallation scripts
 set(SCRIPTS "${CMAKE_CURRENT_SOURCE_DIR}/scripts/cmake")
@@ -30,22 +27,40 @@ set(INST_RUNTIME_DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
 # Determines the installation path for libinvmanl.so
 set(INST_LIBRARY_DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
 
-## Includes the library compilation scripts ( sqlite3 and cxxopts ) ##
+# Determines the absolute path to the sql database initializer code
+set(DB_INIT_FILE_DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/scripts/database/initializer.sql")
+
+# Determines the absolute path to the directory in which the program stores data files
+set(INST_ARCHIVES_DESTINATION "$ENV{HOME}/.local/share/invman")
+
+# Determines where the database file is located
+set(DB_DATA_FILE_DESTINATION "${INST_ARCHIVES_DESTINATION}/invman.db")
+
+# Makes reference to the auto generated file install_manifest.txt path
+set(INSTALL_MANIFEST "${CMAKE_CURRENT_BINARY_DIR}/install_manifest.txt")
+
+# Determines the headers files manifest file location
+set(HEADERS_MANIFEST "${CMAKE_CURRENT_BINARY_DIR}/headers_manifest.txt")
+
+# Determines the archives (such as invman.db) manifest file location
+set(ARCHIVES_MANIFEST "${CMAKE_CURRENT_BINARY_DIR}/archives_manifest.txt")
+
+# # Includes the library compilation scripts ( sqlite3 and cxxopts ) ##
 
 # It obtains and builds sqlite source files.
 include("${SCRIPTS}/fetch-sqlite.cmake")
 
-# It creates the sqlite database file
-include("${SCRIPTS}/create-database.cmake")
-
 # It obtains cxxopts options parser library source
 include("${SCRIPTS}/fetch-cxxopts.cmake")
+
+# It creates the database file and a target which runs a python script that inits the database
+include("${SCRIPTS}/creates-initdb-target.cmake")
 
 # It creates a interface lib for exposing headers to ${EXECUTABLE}
 add_library(add_includes INTERFACE)
 target_include_directories(add_includes INTERFACE ${HEADERS})
 
-# Creates invmanl target
+# Creates invmanl library target
 file(GLOB DATABASE_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/database/*.cpp")
 file(GLOB PRODUCTS_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/product/*.cpp")
 
@@ -55,27 +70,20 @@ target_link_libraries(invmanl PUBLIC cxxopts)
 target_link_libraries(invmanl PUBLIC sqlite)
 
 # Creates the executable target
-if(TESTING)
-  message(STATUS "Preparing project for testing mode")
-  add_executable(invman ${TESTING_EXECUTABLE_PATH})
-  target_compile_definitions(invman PRIVATE TESTING_MODE)
-else()
-  message(STATUS "Preparing project for release mode")
-  add_executable(invman ${EXECUTABLE_PATH})
+add_executable(invman ${MAINCPP})
+
+target_compile_definitions(invman PRIVATE "DB_DATA_FILE_DESTINATION=\"${DB_DATA_FILE_DESTINATION}\"")
+
+# Executable target definitions
+if(DEV_MODE)
+  target_compile_definitions(invman PRIVATE "DEV_MODE")
 endif()
+
+# Dependencies
+add_dependencies(invman init_database)
 
 # Links the library with the executable
 target_link_libraries(invman PRIVATE invmanl)
-
-# Definitions
-if(DEV)
-  target_compile_definitions(invman PRIVATE DEV_MODE)
-endif()
-
-target_compile_definitions(invman PRIVATE DATABASE_INIT_FILE="${DATABASE_INIT_FILE}")
-
-# Dependencies
-add_dependencies(invman create_database_file)
 
 # Creates installation / desinstallation targets
 include("${SCRIPTS}/create-install-target.cmake")
